# todolist-python

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 75f370e4c9e6_create_project_and_task_tables.py  be10d40228e0_add_closed_at_column_to_tasks_table.py
src/app/cli/: console.py
src/app/commands/: autoclose_overdue.py  scheduler.py
src/app/db/: base.py  session.py
src/app/models/: project.py  task.py
src/app/repositories/: project_repository.py  sqlalchemy_repository.py
src/app/services/: project_service.py
src/todolist/: cli.py  exceptions.py  models.py  repository.py  respository.py  service.py
